build dependencies updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
 streamlit
 pandas
+plotly
+wordcloud
+textblob
+spacy
+scipy
 numpy
 matplotlib
-seaborn
-wordcloud
-scikit-learn
-transformers
-torch
-tqdm
 requests
-nltk
-instagrapi
-plotly
-spacy
-textblob
+regex
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz
