build dependencies updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ pandas
 plotly
 wordcloud
 textblob
-spacy
+spacy==3.5.0
+thinc==8.1.0
 scipy
-numpy
+numpy==1.23.5
 matplotlib
 requests
 regex
+cython==0.29.36
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0.tar.gz
